--- a/melissa/mel_site/templates/mel_site/get_involved.html
+++ b/melissa/mel_site/templates/mel_site/get_involved.html
@@ -7,7 +7,6 @@
 <div class="jumbotron jumbotron-fluid">
   <div class="text-center col-md-7 p-lg-5 mx-auto my-5">
     <h1 class="title">GET INVOLVED</h1>
-
     <h2 class="title 2">
       <i>THE #SLEIGHALLDAY MOVEMENT</i>
 
@@ -16,7 +15,9 @@
       <button type="button" class="btn btn-light" data-toggle="modal" data-target="#SignUpModal">NEWSLETTER SIGN-UP</button>
     </div>
     <div class="padding">
-      <button type="button" class="btn btn-light">DONATE</button>
+      <a target="_blank" href="https://paypal.me/mellotholz">
+        <button type="button" class="btn btn-light">DONATE</button>
+      </a>
     </div>
     
       
@@ -29,7 +30,7 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="SignUpModalLabel">Newsletter Sign-Up</h5>
+        <h5 class="modal-title" id="SignUpModalLabel">NEWSLETTER SIGN-UP</h5>
         <button type="button" class="close" data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">&times;</span>
         </button>
@@ -38,7 +39,7 @@
           <div id="mc_embed_signup">
               <form action="https://gmail.us20.list-manage.com/subscribe/post?u=96011a2266376d2523203661f&amp;id=a5188df2ab" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                   <div id="mc_embed_signup_scroll">
-                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+                  <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Email Address" required>
                   <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
                   <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_96011a2266376d2523203661f_a5188df2ab" tabindex="-1" value=""></div>
                   <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
